# ARIA_MoldVision

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: ARIA_System_Integration.md  BUNDLE_CONTRACT.md  CONTEXT  DATA_LAKE_DESIGN.md  LABELING_WORKFLOW.md  ML_Backend_Evaluation.md  MoldVision_Predictive_Model_Plan.md  TOOLS.md
moldvision/: bundle.py  cli.py  cli_handlers.py  lake.py  lake_label.py  lake_models.py  lake_pull.py  lake_storage.py  publish.py
moldvision/predictive/: __init__.py  suggestion_bundle.py  trainer.py  training_row_loader.py
rfdetr_training/: appconfig.py  bundle.py  bundle_runner.py  checkpoints.py  cli.py  coco.py  coco_merge.py  datasets.py  deploy.py  export.py  infer.py  ingest.py  model_factory.py  postprocess.py  quantization.py  rfdetr_patches.py  train.py
scripts/: infer_image.py  infer_video.py  infer_webcam.py  remap_coco_ids.py
tests/: test_gbt_trainer.py  test_phase2_b2_e2_e3.py  test_predictive_cli.py  test_publish.py  test_suggestion_bundle.py  test_training_row_loader.py
