[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-moldvision"
version = "0.1.0"
description = "CLI workspace to create datasets and train defect detection models (ARIA_MoldVision)."
requires-python = ">=3.9"
readme = "README.md"

[project.scripts]
moldvision = "rfdetr_training.cli:main"

[tool.setuptools]
packages = ["rfdetr_training"]

